[project]
name = "causal-inference-portfolio-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.56",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
